Enhance Baget deployment with MetalLB integration and LoadBalancer service type
This commit updates the Baget deployment script to include MetalLB configuration for load balancing, allowing for dynamic IP address allocation. It also modifies the Baget service type from ClusterIP to LoadBalancer in the YAML file, enabling external access to the service. Annotations for the MetalLB address pool are added to ensure proper service routing.

--- a/k8s/baget-deployment.yaml
+++ b/k8s/baget-deployment.yaml
@@ -119,6 +119,8 @@ metadata:
   namespace: baget
   labels:
     app: baget
+  annotations:
+    metallb.universe.tf/address-pool: baget-pool
 spec:
   selector:
     app: baget
@@ -126,4 +128,4 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 80
-  type: ClusterIP
+  type: LoadBalancer
