Add MetalLB BGP configuration and update address pool in YAML
This commit introduces a new MetalLB BGP configuration file and updates the existing MetalLB configuration YAML. The BGP configuration specifies the router settings and neighbor peers, while the YAML file changes the address pool range and updates the API version to v1beta2. These changes enhance the MetalLB setup for better load balancing and service management.

--- a/k8s/addons/metallb-config.yaml
+++ b/k8s/addons/metallb-config.yaml
@@ -5,15 +5,26 @@ metadata:
   namespace: metallb-system
 spec:
   addresses:
-    - 192.168.1.240-192.168.1.250
+    - 192.168.0.240-192.168.0.250
 ---
-apiVersion: metallb.io/v1beta1
-kind: L2Advertisement
+apiVersion: metallb.io/v1beta2
+kind: BGPPeer
 metadata:
-  name: default-l2
+  name: udm
+  namespace: metallb-system
+spec:
+  myASN: 65002        # MetalLB speakers (cluster ASN)
+  peerASN: 65001      # UDM Pro ASN
+  peerAddress: 192.168.0.1
+  # Optional:
+  # bfdProfile: default
+  # nodeSelectors: []
+---
+apiVersion: metallb.io/v1beta2
+kind: BGPAdvertisement
+metadata:
+  name: default-adv
   namespace: metallb-system
 spec:
   ipAddressPools:
     - default-pool
-
-
