Update MetalLB configuration to use BGP listen range and add BFD profile for fast failover
This commit modifies the MetalLB configuration to replace individual neighbor definitions with a BGP listen range for improved scalability. Additionally, a new BFD profile is introduced in the MetalLB configuration YAML to enhance failover capabilities. The Baget deployment script is also updated to prefer the last assigned external IP reported by MetalLB, ensuring stability in service access during deployments.

--- a/k8s/addons/metallb-config.yaml
+++ b/k8s/addons/metallb-config.yaml
@@ -7,6 +7,19 @@ spec:
   addresses:
     - 192.168.1.10-192.168.1.250
 ---
+apiVersion: metallb.io/v1beta1
+kind: BFDProfile
+metadata:
+  name: fast-failover
+  namespace: metallb-system
+spec:
+  receiveInterval: 300
+  transmitInterval: 300
+  detectMultiplier: 3
+  echoMode: true
+  passiveMode: false
+  minimumTtl: 254
+---
 apiVersion: metallb.io/v1beta2
 kind: BGPPeer
 metadata:
@@ -16,6 +29,7 @@ spec:
   myASN: 65002        # MetalLB speakers (cluster ASN)
   peerASN: 65001      # UDM Pro ASN
   peerAddress: 192.168.0.1
+  bfdProfile: fast-failover
 ---
 apiVersion: metallb.io/v1beta1
 kind: BGPAdvertisement
