--- a/k8s/metalb.conf
+++ b/k8s/metalb.conf
@@ -8,10 +8,7 @@ router bgp 65001
  neighbor K8S-PEERS peer-group
  neighbor K8S-PEERS remote-as 65002
  neighbor K8S-PEERS bfd
- !
- neighbor 192.168.0.9 peer-group K8S-PEERS
- neighbor 192.168.0.76 peer-group K8S-PEERS
- neighbor 192.168.0.179 peer-group K8S-PEERS
+ bgp listen range 192.168.0.0/24 peer-group K8S-PEERS
  !
  address-family ipv4 unicast
   neighbor K8S-PEERS activate
