--- a/k8s/addons/kustomization.yaml
+++ b/k8s/addons/kustomization.yaml
@@ -8,4 +8,6 @@ resources:
   # Longhorn (CRDs + controllers; adjust version if needed)
   - https://raw.githubusercontent.com/longhorn/longhorn/v1.6.2/deploy/longhorn.yaml
 
+  # Kubernetes Dashboard
+  - kubernetes-dashboard
 
