Add storage class to Prometheus PersistentVolumeClaim for improved data management

--- a/k8s/applications/prometheus-deployment.yaml
+++ b/k8s/applications/prometheus-deployment.yaml
@@ -167,6 +167,7 @@ metadata:
   name: prometheus-data
   namespace: prometheus
 spec:
+  storageClassName: longhorn
   accessModes:
     - ReadWriteOnce
   resources:
