Enhance deployment script to wait for Longhorn UI LoadBalancer address
This commit adds logic to the deployment script to wait for the Longhorn UI LoadBalancer address to be assigned. It includes logging for the availability of the Longhorn UI, improving the deployment process by ensuring that the Longhorn frontend is accessible before proceeding with application deployments.

--- a/k8s/addons/kustomization.yaml
+++ b/k8s/addons/kustomization.yaml
@@ -5,8 +5,8 @@ resources:
   # MetalLB (native manifests)
   - https://raw.githubusercontent.com/metallb/metallb/v0.14.5/config/manifests/metallb-native.yaml
 
-  # Longhorn (CRDs + controllers; adjust version if needed)
-  - https://raw.githubusercontent.com/longhorn/longhorn/v1.6.2/deploy/longhorn.yaml
+  # Longhorn (via local overlay to apply LB patch)
+  - longhorn
 
   # Kubernetes Dashboard
   - kubernetes-dashboard
