Refactor kustomization files to use 'patches' instead of 'patchesStrategicMerge' for service load balancer configuration
This commit updates the kustomization.yaml files for both the Kubernetes Dashboard and Longhorn addons to replace the 'patchesStrategicMerge' key with 'patches', aligning with the latest Kustomize specifications for better compatibility and clarity in resource management.

--- a/k8s/addons/longhorn/kustomization.yaml
+++ b/k8s/addons/longhorn/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - https://raw.githubusercontent.com/longhorn/longhorn/v1.6.2/deploy/longhorn.yaml
 
-patchesStrategicMerge:
-  - service-lb.yaml
+patches:
+  - path: service-lb.yaml
 
 
