--- a/k8s/addons/kubernetes-dashboard/kustomization.yaml
+++ b/k8s/addons/kubernetes-dashboard/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - https://raw.githubusercontent.com/kubernetes/dashboard/v2.7.0/aio/deploy/recommended.yaml
   - admin-service-account.yaml
 
-patchesStrategicMerge:
-  - service-lb.yaml
+patches:
+  - path: service-lb.yaml
 
 
