--- a/k8s/addons/longhorn/kustomization.yaml
+++ b/k8s/addons/longhorn/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 
 resources:
   - https://raw.githubusercontent.com/longhorn/longhorn/v1.6.2/deploy/longhorn.yaml
+  - settings-mkfs.yaml
 
 patches:
   - path: service-lb.yaml
