Refactor Longhorn storage configuration by removing storageclass.yaml and adding storageclass-patch.yaml to kustomization.yaml
This commit deletes the outdated storageclass.yaml file and introduces storageclass-patch.yaml, which enhances the Longhorn storage class configuration with additional parameters. The kustomization.yaml is updated to reference the new patch, streamlining resource management and improving deployment efficiency.

--- a/k8s/addons/longhorn/kustomization.yaml
+++ b/k8s/addons/longhorn/kustomization.yaml
@@ -3,9 +3,9 @@ kind: Kustomization
 
 resources:
   - https://raw.githubusercontent.com/longhorn/longhorn/v1.6.2/deploy/longhorn.yaml
-  - storageclass.yaml
 
 patches:
   - path: service-lb.yaml
+  - path: storageclass-patch.yaml
 
 
