--- a/k8s/addons/longhorn/storageclass-patch.yaml
+++ b/k8s/addons/longhorn/storageclass-patch.yaml
@@ -3,7 +3,13 @@ kind: StorageClass
 metadata:
   name: longhorn
 provisioner: driver.longhorn.io
+allowVolumeExpansion: true
+reclaimPolicy: Delete
+volumeBindingMode: Immediate
 parameters:
+  numberOfReplicas: "2"
+  staleReplicaTimeout: "30"
+  fsType: "ext4"
   mkfsParams: "-F"
 
 
