Add Terraform lock file and enhance Makefile help output
This commit introduces a new Terraform lock file to manage provider dependencies for Helm and Kubernetes, ensuring consistent infrastructure deployments. Additionally, the Makefile is updated to improve the help output, providing clearer descriptions for various commands related to initialization, planning, applying, and debugging components. These changes aim to enhance usability and maintainability of the Terraform setup.

--- a/terraform/Makefile
+++ b/terraform/Makefile
@@ -1,3 +1,6 @@
+# Cross-platform help - Simple approach that works everywhere
+# We'll hardcode the help sections for reliability
+
 .PHONY: help init plan apply destroy validate format lint check-vars status clean \
 	plan-networking plan-storage plan-monitoring plan-applications plan-dns \
 	apply-networking apply-storage apply-monitoring apply-applications apply-dns \
@@ -17,19 +20,58 @@ help: ## Show this help message
 	@echo "  make deploy          # Full deployment"
 	@echo ""
 	@echo "📋 GENERAL TARGETS:"
-	@awk 'BEGIN {FS = ":.*?## "} /^[a-zA-Z_-]+:.*?## / && !/^(plan|apply|debug|status)-/ {printf "  %-20s %s\n", $$1, $$2}' $(MAKEFILE_LIST)
+	@echo "  help                 Show this help message"
+	@echo "  init                 Initialize Terraform"
+	@echo "  plan                 Plan Terraform deployment"
+	@echo "  apply                Apply Terraform configuration"
+	@echo "  destroy              Destroy Terraform infrastructure"
+	@echo "  validate             Validate Terraform configuration"
+	@echo "  format               Format Terraform files"
+	@echo "  lint                 Lint and validate Terraform code"
+	@echo "  check-vars           Check if terraform.tfvars exists"
+	@echo "  status               Show current deployment status"
+	@echo "  clean                Clean Terraform cache and state"
+	@echo "  setup                Complete setup process"
+	@echo "  deploy               Full deployment"
+	@echo "  generate-secrets     Generate secure passwords"
+	@echo "  list-components      List all infrastructure components"
+	@echo "  logs                 Show logs for all deployed applications"
+	@echo "  bgp-status           Check BGP configuration status"
+	@echo "  deploy-core          Deploy core infrastructure"
+	@echo "  deploy-apps          Deploy applications"
+	@echo "  show-structure       Show the modular file structure"
+	@echo "  quick-debug          Quick debug of all components"
+	@echo "  taint-component      Taint a component for recreation"
 	@echo ""
 	@echo "🎯 COMPONENT PLANNING (plan before deploy):"
-	@awk 'BEGIN {FS = ":.*?## "} /^plan-.*:.*?## / {printf "  %-20s %s\n", $$1, $$2}' $(MAKEFILE_LIST)
+	@echo "  plan-networking      Plan networking components"
+	@echo "  plan-storage         Plan storage components"
+	@echo "  plan-monitoring      Plan monitoring components"
+	@echo "  plan-applications    Plan application components"
+	@echo "  plan-dns             Plan DNS components"
+	@echo "  plan-all-components  Plan all components individually"
 	@echo ""
 	@echo "🚀 COMPONENT DEPLOYMENT:"
-	@awk 'BEGIN {FS = ":.*?## "} /^apply-.*:.*?## / {printf "  %-20s %s\n", $$1, $$2}' $(MAKEFILE_LIST)
+	@echo "  apply-networking     Deploy networking components"
+	@echo "  apply-storage        Deploy storage components"
+	@echo "  apply-monitoring     Deploy monitoring components"
+	@echo "  apply-applications   Deploy application components"
+	@echo "  apply-dns            Deploy DNS components"
 	@echo ""
 	@echo "🔍 COMPONENT DEBUGGING:"
-	@awk 'BEGIN {FS = ":.*?## "} /^debug-.*:.*?## / {printf "  %-20s %s\n", $$1, $$2}' $(MAKEFILE_LIST)
+	@echo "  debug-networking     Debug networking components"
+	@echo "  debug-storage        Debug storage components"
+	@echo "  debug-monitoring     Debug monitoring components"
+	@echo "  debug-applications   Debug application components"
+	@echo "  debug-dns            Debug DNS components"
 	@echo ""
 	@echo "📊 COMPONENT STATUS:"
-	@awk 'BEGIN {FS = ":.*?## "} /^status-.*:.*?## / {printf "  %-20s %s\n", $$1, $$2}' $(MAKEFILE_LIST)
+	@echo "  status-networking    Show networking component status"
+	@echo "  status-storage       Show storage component status"
+	@echo "  status-monitoring    Show monitoring component status"
+	@echo "  status-applications  Show application component status"
+	@echo "  status-dns           Show DNS component status"
+	@echo "  status-all-components Show status for all components"
 	@echo ""
 	@echo "💡 EXAMPLES:"
 	@echo "  make plan-storage && make apply-storage    # Deploy only Longhorn"
