Refine cleanup process in Makefile for Longhorn resources
This commit updates the `force-clean` target in the Terraform Makefile to enhance the cleanup process for Longhorn resources. It introduces additional steps for deleting remaining pods, controllers, and Helm releases, ensuring a thorough cleanup. The echo statements have been modified for clarity, providing better feedback during the cleanup process. These changes improve resource management and deployment reliability.

--- a/terraform/Makefile
+++ b/terraform/Makefile
@@ -125,8 +125,16 @@ force-clean: ## Force cleanup of all resources (use when destroy fails)
 	@kubectl delete crd backingimagedatasources.longhorn.io backingimagemanagers.longhorn.io backingimages.longhorn.io backupbackingimages.longhorn.io backups.longhorn.io backuptargets.longhorn.io backupvolumes.longhorn.io engineimages.longhorn.io engines.longhorn.io instancemanagers.longhorn.io nodes.longhorn.io orphans.longhorn.io recurringjobs.longhorn.io replicas.longhorn.io settings.longhorn.io sharemanagers.longhorn.io snapshots.longhorn.io supportbundles.longhorn.io systembackups.longhorn.io systemrestores.longhorn.io volumeattachments.longhorn.io volumes.longhorn.io --ignore-not-found=true
 	@kubectl delete validatingwebhookconfigurations longhorn-webhook-validator --ignore-not-found=true
 	@kubectl delete mutatingwebhookconfigurations longhorn-webhook-mutator --ignore-not-found=true
-	@echo "Step 9: Force delete any stuck namespaces (final cleanup)..."
+	@echo "Step 9: Clean up any remaining pods and controllers..."
+	@kubectl delete pods -n longhorn-system --all --force --grace-period=0 --ignore-not-found=true 2>/dev/null || echo "No pods to delete"
+	@kubectl delete daemonsets,deployments,replicasets -n longhorn-system --all --ignore-not-found=true 2>/dev/null || echo "No controllers to delete"
+	@echo "Step 10: Force delete any stuck namespaces (final cleanup)..."
 	@kubectl delete namespace longhorn-system monitoring baget --force --grace-period=0 --ignore-not-found=true 2>/dev/null || echo "Namespaces already deleted or deletion completed"
+	@echo "Step 11: Clean up any remaining Helm releases..."
+	@helm uninstall longhorn -n longhorn-system --ignore-not-found 2>/dev/null || echo "No Helm releases to clean up"
+	@echo "Step 12: Final verification..."
+	@kubectl get pods -n longhorn-system --ignore-not-found=true 2>/dev/null || echo "✓ longhorn-system namespace is clean"
+	@kubectl get crd 2>/dev/null | Select-String -Pattern "longhorn" -Quiet && echo "⚠ Some Longhorn CRDs still present" || echo "✓ Longhorn CRDs cleaned up"
 	@echo "✅ Comprehensive cleanup completed!"
 
 destroy-clean: force-clean ## Alias for force-clean
